--- a/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
@@ -2,9 +2,6 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLoginLayout.cshtml";
 }
 
-
-
-
 <!-- Content -->
 
 <div class="container-xxl">
@@ -99,9 +96,9 @@
                                 <label class="form-check-label" for="remember-me"> Remember Me </label>
 
                             </div>
-                            <a href="auth-forgot-password-basic.html">
+                            @*<a href="auth-forgot-password-basic.html">
                                 <small style="text-align: right;">Forgot Password?</small>
-                            </a>
+                            </a>*@
 
                         </div>
                         <div class="mb-3">
