--- a/JobPortal.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-using JobPortal.Data.DataContext;
-using JobPortal.Data.Entities;
-using JobPortal.Data.ViewModel;
+@using JobPortal.Data.DataContext;
+@using JobPortal.Data.Entities;
+@using JobPortal.Data.ViewModel;
 @using Microsoft.AspNetCore.Http
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
