--- a/JobPortal.WebApp/Areas/Admin/Views/Categories/Create.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Categories/Create.cshtml
@@ -21,11 +21,11 @@
                             <input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
-                        @*<div class="form-group">
+                        <div class="form-group">
                             <label asp-for="Description" class="control-label"></label>
                             <input asp-for="Description" class="form-control" />
                             <span asp-validation-for="Description" class="text-danger"></span>
-                        </div>*@
+                        </div>
                         <br />
                         <div class="form-group">
                             <input style="background-color: forestgreen" onclick="onConfirm()" type="submit" value="Create" class="btn btn-primary" />
