--- a/JobPortal.WebApp/Areas/Admin/Views/Categories/Details.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Categories/Details.cshtml
@@ -23,12 +23,12 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Name)
                 </dd>
-                @*<dt class="col-sm-2">
+                <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.Description)
-                </dt>*@
-                @*<dd class="col-sm-10">
+                </dt>
+                <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Description)
-                </dd>*@
+                </dd>
             </dl>
 
             <div>
