--- a/JobPortal.WebApp/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Categories/Edit.cshtml
@@ -22,11 +22,11 @@
                             <input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
-                        @*<div class="form-group">
+                        <div class="form-group">
                             <label asp-for="Description" class="control-label"></label>
                             <input asp-for="Description" class="form-control" />
                             <span asp-validation-for="Description" class="text-danger"></span>
-                        </div>*@
+                        </div>
                         <br/>
                         <div class="form-group">
                             <input type="submit" value="Save" class="btn btn-primary" />
