--- a/JobPortal.WebApp/Views/Shared/_LayoutShortBanner.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LayoutShortBanner.cshtml
@@ -51,8 +51,8 @@
 								<li><a asp-controller="Home" asp-action="BlogSingle">single</a></li>
 							</ul>
 						</li>
-						<li><a class="ticker-btn" href="#">Signup</a></li>
-						<li><a class="ticker-btn" href="#">Login</a></li>
+						<!--Login & Signup-->
+						<partial name="_LoginPartial.cshtml" />
 					</ul>
 				</nav>
 				<!-- End nav-menu-container -->
