--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -565,7 +565,7 @@
                                         <div class="dropdown-divider"></div>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="auth-login-basic.html">
+                                        <a class="dropdown-item" href="/admin/logout">
                                             <i class="bx bx-power-off me-2"></i>
                                             <span class="align-middle">Log Out</span>
                                         </a>
