--- a/JobPortal.WebApp/Views/Shared/_LayoutLogin.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LayoutLogin.cshtml
@@ -128,10 +128,15 @@
 
     <!-- / Content -->
 
-    <div class="buy-now">
+    @*<div class="buy-now">
         <a href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
            target="_blank"
            class="btn btn-danger btn-buy-now">Upgrade to Pro</a>
+    </div>*@
+    <div class="buy-now">
+        <a asp-area="Employer" asp-action="Login" asp-controller="Account"
+           target="_blank"
+           class="btn btn-danger btn-buy-now">Login for Employer</a>
     </div>
 
     <!-- Core JS -->
