--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -23,7 +23,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Dashboard - Analytics | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    @*<title>Dashboard - Analytics | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>*@
+    <title>Admin</title>
 
     <meta name="description" content="" />
 
@@ -132,7 +133,7 @@
                         </a>
                     </li>
 
-               
+
 
                     <!-- Roles & User -->
 
