--- a/JobPortal.WebApp/Views/Account/Login.cshtml
+++ b/JobPortal.WebApp/Views/Account/Login.cshtml
@@ -47,6 +47,10 @@
     <div class="mb-3">
         <button id="login-submit" class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
     </div>
+    @*<br />
+    <div class="mb-3">
+        <button asp-area="Employer" asp-action="Login" asp-controller="Account" class="btn btn-primary d-grid w-100">Login for Employer</button>
+    </div>*@
 </form>
 
 <p class="text-center">
@@ -59,34 +63,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-
-@*<div class="account_grid">
-    <div class="login-right">
-        <h3>KHÁCH HÀNG ĐÃ ĐĂNG KÝ</h3>
-        <p>Nếu bạn đã có tài khoản, vui lòng đăng nhập.</p>
-        <section>
-            <form id="account" method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Email" class="form-label"></label>
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Password" class="form-label"></label>
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">ĐĂNG NHẬP</button>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class=" login-left">
-        <h3>KHÁNG HÀNG MỚI</h3>
-        <p>Bằng cách tạo tài khoản, bạn sẽ có thể chuyển qua quy trình thanh toán nhanh hơn, lưu trữ nhiều địa chỉ giao hàng, xem và theo dõi đơn đặt hàng trong tài khoản của bạn,...</p>
-        <a class="acount-btn" asp-controller="User" asp-action="Register">Tạo tài khoản</a>
-    </div>
-    <div class="clearfix"> </div>
-</div>*@
