--- a/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
@@ -49,6 +49,10 @@
     </div>
 </form>
 
+
+<a asp-area="Employer" asp-action="Login" asp-controller="Account"
+   class="btn btn-primary d-grid w-100" style="position:center">Login for Employer</a>
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
