--- a/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLayout.cshtml
@@ -271,7 +271,7 @@
                                         <div class="dropdown-divider"></div>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="/employer/logout">
+                                        <a class="dropdown-item" href="/dang-xuat">
                                             <i class="bx bx-power-off me-2"></i>
                                             <span class="align-middle">Log Out</span>
                                         </a>
