--- a/JobPortal.WebApp/Views/Shared/_LayoutUser.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_LayoutUser.cshtml
@@ -38,7 +38,7 @@
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 
-						<!--Login & Signup-->
+						<!--Menu-->
 						<partial name="_MenuPartial.cshtml" />
 
 					</ul>
