--- a/JobPortal.WebApp/Views/Home/Index.cshtml
+++ b/JobPortal.WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<JobPortal.Data.Entities.Job>
-
-<!-- Start banner Area -->
+﻿<!-- Start banner Area -->
 <section class="banner-area relative" id="home">
     <div class="overlay overlay-bg"></div>
     <div class="container">
@@ -49,6 +47,8 @@
     </div>
 </section>
 <!-- End banner Area -->
+
+<!--Category-->
 <!-- Start features Area -->
 <section class="features-area">
     <div class="container">
@@ -67,7 +67,7 @@
     </div>
 </section>
 
-<!--Job-->
+<!--Job model-->
 <!-- Start popular-post Area -->
 <section class="popular-post-area pt-100">
     <div class="container">
@@ -77,7 +77,7 @@
             {
                 <div class="single-popular-post d-flex flex-row">
                     <div class="thumb">
-                        <img href="/Job/@job.Slug" class="img-fluid" src="~/assets/user/img/p1.png" alt="">
+                        <img href="/Job/@job.Slug" class="img-fluid" src="../assets/user/img/p1.png" alt="">
                         <a class="btns text-uppercase" href="/Job/@job.Slug">view job</a>
                     </div>
                     <div class="details">
@@ -109,8 +109,8 @@
             {
                 <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="single-fcat">
-                        <a href="~/assets/user/category.html">
-                            <img src="~/assets/user/img/o1.png" alt="">
+                        <a href="../assets/user/category.html">
+                            <img src="../assets/user/img/o1.png" alt="">
                         </a>
                         <p>@job.Name</p>
                     </div>
@@ -132,88 +132,25 @@
             </div>
         </div>
         <div class="row">
-        @for (int i = 0; i < 4; i++)
+        @foreach (var emp in ViewBag.ListEmployers)
         {
-            if (i == 0)
-            {
-                    <div class='col-xs-16 col-3'>
-                        <a asp-action="index">
-                            <div class="card">
-                                <img class="card-img card-img-top" src="~/assets/user/img/o1.png" alt="Card image" height='200' width='200'>
-                                <div class='card-body'>
-                                    <h4 class='card-title text-center'>Employer Name</h4>
-                                    <footer class='card-text text-center'>
-                                        <span>
-                                            <span> Quantity Jobs </span>
-                                            <span>&nbsp;-&nbsp;</span>
-                                        </span>
-                                        <span>Province</span>
-                                    </footer>
-                                </div>
-                            </div>
-                        </a>
+            <div class='col-xs-16 col-3'>
+                <a asp-action="index">
+                    <div class="card">
+                        <img class="card-img card-img-top" src="../assets/user/img/o1.png" alt="Card image" height='200' width='200'>
+                        <div class='card-body'>
+                            <h4 class='card-title text-center'>@emp.FullName</h4>
+                            <footer class='card-text text-center'>
+                                <span>
+                                    <span> @emp.Address </span>
+                                    <span>&nbsp;-&nbsp;</span>
+                                </span>
+                                <span>@emp.Address</span>
+                            </footer>
+                        </div>
                     </div>
-            }
-            else if (i == 1)
-            {
-                    <div class='col-xs-16 col-3'>
-                        <a asp-action="index">
-                            <div class="card">
-                                <img class="card-img card-img-top" src="~/assets/user/img/o1.png" alt="Card image" height='200' width='200'>
-                                <div class='card-body'>
-                                    <h4 class='card-title text-center'>Employer Name</h4>
-                                    <footer class='card-text text-center'>
-                                        <span>
-                                            <span> Quantity Jobs </span>
-                                            <span>&nbsp;-&nbsp;</span>
-                                        </span>
-                                        <span>Province</span>
-                                    </footer>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-            }
-            else if (i == 2)
-            {
-                    <div class='col-xs-16 col-3'>
-                        <a asp-action="index">
-                            <div class="card">
-                                <img class="card-img card-img-top" src="~/assets/user/img/o1.png" alt="Card image" height='200' width='200'>
-                                <div class='card-body'>
-                                    <h4 class='card-title text-center'>Employer Name</h4>
-                                    <footer class='card-text text-center'>
-                                        <span>
-                                            <span> Quantity Jobs </span>
-                                            <span>&nbsp;-&nbsp;</span>
-                                        </span>
-                                        <span>Province</span>
-                                    </footer>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-            }
-            else if (i == 3)
-            {
-                    <div class='col-xs-16 col-3'>
-                        <a asp-action="index">
-                            <div class="card">
-                                <img class="card-img card-img-top" src="~/assets/user/img/o1.png" alt="Card image" height='200' width='200'>
-                                <div class='card-body'>
-                                    <h4 class='card-title text-center'>Employer Name</h4>
-                                    <footer class='card-text text-center'>
-                                        <span>
-                                            <span> Quantity Jobs </span>
-                                            <span>&nbsp;-&nbsp;</span>
-                                        </span>
-                                        <span>Province</span>
-                                    </footer>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-            }
+                </a>
+            </div>
         }
         </div>
     </div>
