add search func

--- a/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <!-- /Logo -->
 <h4 class="mb-2">Admin area! 👋</h4>
-<p class="mb-4">Please sign-in to your account and start the adventure</p>
+<p class="mb-4">Please sign-in to your account and start the management</p>
 
 <form asp-action="Login" asp-controller="Account" id="account" class="mb-3" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
