--- a/JobPortal.WebApp/Areas/Admin/Views/Roles/EditRole.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Roles/EditRole.cshtml
@@ -9,7 +9,7 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Chỉnh sửa role</h4>
+                    <h4 class="card-title">Edit Role</h4>
                     <form method="post" class="mt-3 row">
                         <div class="col-md-6">
                             <div class="form-group row">
