--- a/JobPortal.WebApp/Areas/Admin/Views/Roles/EditUsersInRole.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Roles/EditUsersInRole.cshtml
@@ -11,7 +11,7 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Phân quyền cho user</h4>
+                    <h4 class="card-title">Set Role For User</h4>
                     <form method="post" class="p-3">
 
                         @for (int i = 0; i < Model.Count; i++)
