--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -147,12 +147,12 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a  class="menu-link">
+                                <a href="PageError.html" class="menu-link" target="_blank">
                                     <div data-i18n="Account">User Management</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="pages-account-settings-notifications.html" class="menu-link">
+                                <a onclick="window.location.href='~/Views/Shared/PageError.cshtml'" class="menu-link" target="_blank">
                                     <div data-i18n="Notifications">Employer Management</div>
                                 </a>
                             </li>
