--- a/JobPortal.WebApp/Areas/Admin/Views/Titles/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Titles/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-xxl flex-grow-1 container-p-y">
     <div class="card">
-        <h1 class="card-header">Table of Titles</h1>
+        <h1 style="text-align:center" class="card-header">Table of Titles</h1>
         <div class="card-body">
             <a asp-action="Create" class="btn btn-primary">Create New</a>
             <p> <br /></p>
@@ -18,7 +18,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
-                            <th></th>
+                            <th>
+                                ACTIONS
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
