--- a/JobPortal.WebApp/Views/Job/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Job/Detail.cshtml
@@ -65,27 +65,27 @@
 					<h4 class="single-title">Experience Requirements</h4>
 					<ul>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 					</ul>
@@ -94,19 +94,19 @@
 					<h4 class="single-title">Job Features & Overviews</h4>
 					<ul>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 					</ul>
@@ -115,15 +115,15 @@
 					<h4 class="single-title">Education Requirements</h4>
 					<ul>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 						<li>
-							<img src="~/assets/user/img/pages/list.jpg" alt="">
+							<img src="../assets/user/img/pages/list.jpg" alt="">
 							<span>@Model.Description</span>
 						</li>
 					</ul>
