--- a/JobPortal.WebApp/Areas/Admin/Views/Roles/CreateRole.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Roles/CreateRole.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model JobPortal.Data.ViewModel.CreateRoleViewModel
+﻿@model JobPortal.Data.ViewModel.CreateRoleViewModel
 
 @{
     ViewData["Title"] = "Thêm mới role";
@@ -12,7 +11,7 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Thêm mới danh mục</h4>
+                    <h4 class="card-title">Create Role</h4>
                     <div class="col-md-4">
                         <form asp-action="CreateRole" method="post" id="form">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -26,14 +25,15 @@
                                 <input asp-for="Description" class="form-control" />
                                 <span asp-validation-for="Description" class="text-danger"></span>
                             </div>
+                            <br />
                             <div class="form-group">
-                                <input type="button" value="Create" class="btn btn-primary" onclick="onConfirm()"/>
+                                <input type="submit" value="Create" class="btn btn-primary" onclick="onConfirm()" />
                             </div>
                         </form>
                     </div>
-
+                    <br />
                     <div>
-                        <a asp-action="Index">Back to List</a>
+                        <a style="background-color: gray" class="btn btn-primary" asp-action="Index">Back to List</a>
                     </div>
                 </div>
             </div>
@@ -47,28 +47,25 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-<script>
-    function onConfirm() {
-        Swal.fire({
-          title: 'Thêm mới quyền?',
-          text: "Bạn có chắc sẽ thêm quyền này?",
-          showCancelButton: true,
-          confirmButtonColor: '#3085d6',
-          cancelButtonColor: '#d33',
-          confirmButtonText: 'Xác nhận!'
-        }).then((result) => {
-          if (result.isConfirmed) {
-              $("#form").submit();
-            Swal.fire(
-              'Thêm thành công!',
-              '',
-              'success'
-            )
-          } 
-        })
-    }
-
-
-</script>
+    <script>
+        function onConfirm() {
+            Swal.fire({
+                title: 'Thêm mới quyền?',
+                text: "Bạn có chắc sẽ thêm quyền này?",
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Xác nhận!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $("#form").submit();
+                    Swal.fire(
+                        'Thêm thành công!',
+                        '',
+                        'success'
+                    )
+                }
+            })
+        }
+    </script>
 }
-
