--- a/JobPortal.WebApp/Areas/Employer/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Job/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-xxl flex-grow-1 container-p-y">
     <div class="card">
-        <h1 class="card-header">Table of Jobs</h1>
+        <h1 style="text-align:center" class="card-header">Table of Jobs</h1>
         <div class="card-body">
 
             <a asp-action="Create" class="btn btn-primary">Create New</a>
