--- a/JobPortal.WebApp/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Views/Job/Index.cshtml
@@ -45,7 +45,7 @@
                     <div class="single-post d-flex flex-row">
                         <!--Job skill list-->
                         <div class="thumb">
-                            <img height="55" width="100" src="https://careerhub.vn/upload/company/jsq1638871498.png" alt="EMPLOYER IMAGE">
+                            <img height="55" width="100" src="https://localhost:7211/images/jobs/@job.ImageURL" alt="EMPLOYER IMAGE">
                             <ul class="tags">
                                 <!--Job skill area-->
                                 <li>
@@ -119,7 +119,7 @@
                     <ul class="cat-list">
                         @foreach (var skill in ViewBag.ListSkills)
                         {
-                            <li><a class="justify-content-between d-flex" href="#"><p>@skill.Name</p><span>Popular</span></a></li>
+                            <li><a class="justify-content-between d-flex" href="#"><p>@skill.Name</p><span>@skill.JobPopular</span></a></li>
                         }
                     </ul>
                 </div>
