update popup delete func

--- a/JobPortal.WebApp/Areas/Admin/Views/Roles/CreateRole.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Roles/CreateRole.cshtml
@@ -27,7 +27,7 @@
                             </div>
                             <br />
                             <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" onclick="onConfirm()" />
+                                <input style="background-color: forestgreen" type="submit" value="Create" class="btn btn-primary" onclick="onConfirm()" />
                             </div>
                         </form>
                     </div>
