--- a/JobPortal.WebApp/Areas/Admin/Views/Categories/Create.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Categories/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    //Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container-xxl flex-grow-1 container-p-y">
@@ -11,7 +11,7 @@
             <h5 class="card-header">Create Category</h5>
             <div class="row">
                 <div class="col-md-4">
-                    <form asp-action="Create" id="form">
+                    <form asp-action="Create" method="post" id="form">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
@@ -25,7 +25,7 @@
                         </div>
                         <br />
                         <div class="form-group">
-                            <input style="background-color: forestgreen" onclick="onConfirm()" type="submit" value="Create" class="btn btn-primary" />
+                            <input style="background-color: forestgreen" type="submit" value="Create" class="btn btn-primary" />
                         </div>
                     </form>
                 </div>
@@ -43,4 +43,25 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    <script>
+        function onConfirm() {
+            Swal.fire({
+                title: 'Thêm mới danh mục?',
+                text: "Bạn có chắc sẽ thêm mới danh mục này?",
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Xác nhận!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $("#form").submit();
+                    Swal.fire(
+                        'Thêm thành công!',
+                        '',
+                        'success'
+                    )
+                }
+            })
+        }
+    </script>
 }
