--- a/JobPortal.WebApp/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Categories/Delete.cshtml
@@ -24,9 +24,9 @@
                 </dd>
             </dl>
 
-            <form asp-action="Delete">
+            <form asp-action="Delete" id="delete-form">
                 <input type="hidden" asp-for="Id" />
-                <input type="submit" value="Delete" class="btn btn-danger" />
+                <input type="submit" value="Delete" class="btn btn-danger" onclick="showConfirmation()" />
             </form>
             <br />
             <div>
@@ -35,3 +35,16 @@
         </div>
     </div>
 </div>
+
+<script>
+    function showConfirmation() {
+        // Hiển thị pop-up xác nhận
+        if (confirm("Are you sure you want to delete this?")) {
+            // Nếu người dùng đồng ý, submit form
+            document.getElementById("delete-form").submit();
+        } else {
+            // Ngược lại, hủy yêu cầu xóa
+            return false;
+        }
+    }
+</script>
